# open-granola

./: .gitignore  CONTRIBUTING.md  PRIVACY.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: airlock.yml  ci.yml
docs/: ARCHITECTURE.md  LAUNCH_KIT.md
landing/: index.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/src/: airlock.rs  calendar.rs  commands.rs  lib.rs  llm.rs  main.rs  storage.rs  transcribe.rs
src-tauri/src/audio/: loopback.rs  mod.rs
src/components/: ActionItemsView.tsx  Avatar.tsx  CaptureBar.tsx  CommandPalette.tsx  CommitmentsView.tsx  HomeView.tsx  NoteView.tsx  SettingsView.tsx  Sidebar.tsx  TemplatesView.tsx
src/hooks/: useLiveSession.ts  useTauriSession.ts
src/lib/: backend.ts  data.ts  types.ts
